--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -4,4 +4,8 @@ jobs:
   first-job:
     runs-on: ubuntu-18.04
     steps:
+      - Print greeting
+        run: echo "Hello World!"
+        - name: Print goodbye
+        run: echo "BB"
       
